src/test/deca/context/invalid/sansObj/assign-var-non-def.deca
// Description:
//    Affectation à une variable entière d'une variable non définie
//
// Résultat:
//variable non definie
//

{
   int a;
   a = b;
}